
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {float ffred; void** fred; } ;
typedef TYPE_1__ poor ;


 void** fdFile ;
 int fdOffset ;

float readFloat() {
 poor me;






 me.fred[0] = fdFile[fdOffset+0];
 me.fred[1] = fdFile[fdOffset+1];
 me.fred[2] = fdFile[fdOffset+2];
 me.fred[3] = fdFile[fdOffset+3];

 fdOffset += 4;
 return me.ffred;
}
